# ez-cli

./: CMakeLists.txt  compile-options.cmake  custom-build-profiles.cmake  dependencies.cmake  tests-config.cmake
include/ez/: c_string_view.h  cli.h  gsl.h  mp.h  old.h  static_string.h
include/ez/cli/: parameter.h  parameter_traits.h
include/ez/cli/api/: parameter.h
include/ez/cli/details_/: lexer.h  uninitialized.h
include/ez/cli/parameter/: concepts.h  traits.h
tests/: CMakeLists.txt  ambiguous_custom_parameter.test.cpp  boolean_parameter.test.cpp  c_string_view.test.cpp  custom_boolean_parameter.test.cpp  custom_positional_parameter.test.cpp  custom_regular_parameter.test.cpp  incomplete_custom_positional_parameter.test.cpp  inconsistent_custom_parameter.test.cpp  lexer.test.cpp  parameter.test.cpp  positional_parameter.test.cpp  regular_parameter.test.cpp  uninitialized.test.cpp
